// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Product Skeletons stories snapshot > MainSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="block md:hidden space-y-4"
    >
      <div
        class="bg-accent animate-pulse rounded-md h-8 w-3/4"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-md h-4 w-full"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-md h-4 w-2/3"
        data-slot="skeleton"
      />
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-8"
    >
      <div
        class="space-y-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md aspect-square w-full"
          data-slot="skeleton"
        />
        <div
          class="flex space-x-2"
        >
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
        </div>
      </div>
      <div
        class="space-y-6"
      >
        <div
          class="hidden md:block space-y-4"
        >
          <div
            class="bg-accent animate-pulse rounded-md h-10 w-3/4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-full"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-2/3"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="bg-accent animate-pulse rounded-md h-8 w-32"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-4 w-16"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-4 w-12"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-10 w-24"
              data-slot="skeleton"
            />
            <div
              class="bg-accent animate-pulse rounded-md h-10 flex-1"
              data-slot="skeleton"
            />
          </div>
          <div
            class="bg-accent animate-pulse rounded-md h-10 w-full"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-16 space-y-4"
    >
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full animate-pulse"
    >
      <div
        class="text-center mb-8"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-9 sm:h-10 w-64 mx-auto"
          data-slot="skeleton"
        />
      </div>
      <div
        class="px-14"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute -left-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute -right-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationsSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full animate-pulse"
    >
      <div
        class="px-14"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute -left-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute -right-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="w-full animate-pulse"
    >
      <div
        class="px-14"
      >
        <div
          class="relative w-full"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="flex -ml-4 items-stretch flex-nowrap"
            >
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-0 min-w-0 shrink-0 grow-0"
              >
                <div
                  class="w-full max-w-full min-w-0 flex"
                >
                  <div
                    class="bg-card text-card-foreground border rounded-xl overflow-hidden w-full min-w-0 max-w-full flex flex-col-reverse justify-end h-full shadow-sm gap-0 py-0"
                    data-slot="card"
                  >
                    <div
                      class="items-center [.border-t]:pt-6 px-6 pb-6 pt-6 flex-1 flex flex-col justify-end"
                      data-slot="card-footer"
                    >
                      <div
                        class="bg-accent animate-pulse h-9 w-full rounded-md"
                        data-slot="skeleton"
                      />
                    </div>
                    <div
                      class="px-6"
                      data-slot="card-content"
                    >
                      <div
                        class="mt-2"
                      >
                        <div
                          class="bg-accent animate-pulse rounded-md h-5 w-16 ml-auto"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="px-6 pb-0 pt-0 flex flex-row gap-1.5 items-start justify-start self-stretch relative h-16"
                      data-slot="card-content"
                    >
                      <div
                        class="flex flex-col gap-1 items-start justify-start relative flex-1 min-w-0 h-full"
                      >
                        <div
                          class="h-10 flex items-start w-full"
                        >
                          <div
                            class="w-full"
                          >
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                              data-slot="skeleton"
                            />
                            <div
                              class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                              data-slot="skeleton"
                            />
                          </div>
                        </div>
                        <div
                          class="h-8 flex items-end gap-1"
                        >
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                          <div
                            class="bg-accent animate-pulse h-7 w-7 rounded-full"
                            data-slot="skeleton"
                          />
                        </div>
                      </div>
                      <div
                        class="flex flex-col gap-2.5 items-end justify-start shrink-0 relative w-max"
                      >
                        <div
                          class="bg-accent animate-pulse h-5 w-12 rounded-full"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                    <div
                      class="@container/card-header auto-rows-min grid-rows-[auto_auto] has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 py-8 px-6 flex flex-col gap-4 items-center justify-center"
                      data-slot="card-header"
                    >
                      <div
                        class="bg-background rounded-xl overflow-hidden flex items-center justify-center w-full"
                      >
                        <div
                          class="bg-accent animate-pulse aspect-square w-full rounded-lg"
                          data-slot="skeleton"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute -left-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
          <div
            class="absolute -right-14 top-1/2 -translate-y-1/2"
          >
            <div
              class="bg-accent animate-pulse h-8 w-8 rounded-full"
              data-slot="skeleton"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
